--- a/example/index.html
+++ b/example/index.html
@@ -14,8 +14,8 @@
 	<p hide="show">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptates, labore aliquid molestiae modi temporibus. Ex, quis, similique qui provident necessitatibus saepe blanditiis laboriosam nostrum corporis quibusdam impedit libero veniam earum?</p>
 	<script src="../build/build.js"></script>
 	<script>
-	  var lego = require('lego');
-	  var view = lego(document.body, {
+	  var brick = require('brick');
+	  var view = brick(document.body, {
 	  	show: true
 	  }).add('hide', require('hidden-brick'))
 	    .build();
